// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emailsinput matches snapshot 1`] = `
<div>
  <div
    class="emails-input"
    style="border: 1px solid #c3c2cf; border-radius: 4px; background: rgb(255, 255, 255); padding: 6px 7px 8px 7px; height: 100%; overflow-y: scroll;"
  >
    <span />
    <input
      placeholder="add more people..."
      style="display: inline-block; outline: none; padding: 4px 0px; margin: 4px 8px 0px 4px;"
      type="email"
    />
  </div>
  <input
    id="emailsinput"
    type="hidden"
  />
</div>
`;

exports[`emailsinput matches snapshot when multiple emails are entered 1`] = `
<div>
  <div
    class="emails-input"
    style="border: 1px solid #c3c2cf; border-radius: 4px; background: rgb(255, 255, 255); padding: 6px 7px 8px 7px; height: 100%; overflow-y: scroll;"
  >
    <span>
      <div
        style="display: inline-block; background: rgba(102, 153, 255, 0.2); border-radius: 100px; font-size: 14px; line-height: 24px; color: rgb(5, 0, 56); padding: 4px 10px; margin: 0px 4px 0px 0px;"
      >
        jvdham@gmail.com
        <button
          class="__delete-email-button"
          id="__delete-label-0"
          style="width: 17px; height: 17px; background-color: transparent; background-size: contain; background-repeat: no-repeat; border-radius: 0px; padding: 0px; position: relative; top: 5px; left: 3px;"
        />
      </div>
      <div
        style="display: inline-block; background: rgba(102, 153, 255, 0.2); border-radius: 0px; font-size: 14px; line-height: 24px; color: rgb(5, 0, 56); padding: 4px 0px; margin: 4px 8px 0px 4px; background-color: white; border-bottom: 1px dashed #D92929;"
      >
        invalid.email
        <button
          class="__delete-email-button"
          id="__delete-label-1"
          style="width: 17px; height: 17px; background-color: transparent; background-size: contain; background-repeat: no-repeat; border-radius: 0px; padding: 0px; position: relative; top: 5px; left: 3px;"
        />
      </div>
      <div
        style="display: inline-block; background: rgba(102, 153, 255, 0.2); border-radius: 100px; font-size: 14px; line-height: 24px; color: rgb(5, 0, 56); padding: 4px 10px; margin: 0px 4px 0px 0px;"
      >
        someother@mail.com
        <button
          class="__delete-email-button"
          id="__delete-label-2"
          style="width: 17px; height: 17px; background-color: transparent; background-size: contain; background-repeat: no-repeat; border-radius: 0px; padding: 0px; position: relative; top: 5px; left: 3px;"
        />
      </div>
    </span>
    <input
      placeholder="add more people..."
      style="display: inline-block; outline: none; padding: 4px 0px; margin: 4px 8px 0px 4px;"
      type="email"
    />
  </div>
  <input
    id="emailsinput"
    type="hidden"
  />
</div>
`;

exports[`emailsinput matches snapshot when one email is entered 1`] = `
<div>
  <div
    class="emails-input"
    style="border: 1px solid #c3c2cf; border-radius: 4px; background: rgb(255, 255, 255); padding: 6px 7px 8px 7px; height: 100%; overflow-y: scroll;"
  >
    <span>
      <div
        style="display: inline-block; background: rgba(102, 153, 255, 0.2); border-radius: 100px; font-size: 14px; line-height: 24px; color: rgb(5, 0, 56); padding: 4px 10px; margin: 0px 4px 0px 0px;"
      >
        jvdham@gmail.com
        <button
          class="__delete-email-button"
          id="__delete-label-0"
          style="width: 17px; height: 17px; background-color: transparent; background-size: contain; background-repeat: no-repeat; border-radius: 0px; padding: 0px; position: relative; top: 5px; left: 3px;"
        />
      </div>
    </span>
    <input
      placeholder="add more people..."
      style="display: inline-block; outline: none; padding: 4px 0px; margin: 4px 8px 0px 4px;"
      type="email"
    />
  </div>
  <input
    id="emailsinput"
    type="hidden"
  />
</div>
`;
